tests/fixtures/invalid/none_lshift_bytes.py
# Cannot left shift None and Bytes
x: None = None << b"hello"
